# equinox

./: Cargo.toml  default.html  output.html
src/: main.rs
ui/: app-window.slint
