[package]
name = "equinox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.12.1"
maud = "*"
rfd = "0.17.2"
html5ever = "0.36"
markup5ever_rcdom = "0.36"

[build-dependencies]
slint-build = "1.12.1"
